--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,25 +8,29 @@
 
     <Button
         android:id="@+id/good"
-        android:layout_width="wrap_content"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="false"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="30dp"
         android:layout_marginRight="5dp"
-        android:text="Good" />
+        android:backgroundTint="#8E3343"
+        android:text="Good Example"
+        android:textSize="11sp"/>
 
     <Button
         android:id="@+id/bad"
-        android:layout_width="wrap_content"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/good"
         android:layout_alignParentBottom="false"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="false"
         android:layout_marginRight="5dp"
-        android:text="Bad" />
+        android:backgroundTint="#8E3343"
+        android:text="Bad Example"
+        android:textSize="11sp"/>
 
     <fragment
           android:id="@+id/map"
