--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,35 +8,40 @@
 
     <Button
         android:id="@+id/good"
-        android:layout_width="90dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="false"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
-        android:backgroundTint="#8E3343"
-        android:text="Good Example"
-        android:textSize="11sp"/>
+        android:backgroundTint="#34495e"
+        android:text='"Good" Example'
+        android:textColor="@android:color/white"
+        android:textSize="15sp"/>
 
     <Button
         android:id="@+id/bad"
-        android:layout_width="90dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/good"
         android:layout_alignParentBottom="false"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="false"
         android:layout_marginRight="5dp"
-        android:backgroundTint="#8E3343"
-        android:text="Bad Example"
-        android:textSize="11sp"/>
+        android:backgroundTint="#34495e"
+        android:text='"Bad" Example'
+        android:textColor="@android:color/white"
+        android:textSize="15sp"/>
 
     <fragment
-          android:id="@+id/map"
-          android:name="com.google.android.gms.maps.SupportMapFragment"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          tools:context="async.example.com.mappingapp.MapsActivity"/>
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        tools:context="async.example.com.mappingapp.MapsActivity"/>
 
 </RelativeLayout>
